[package]
name = "monitor"
version = "0.1.0"
authors = ["Hiroki Moto <hiroki.moto.pro@gmail.com>"]
edition = "2018"
description = "Tray Icon, that thing in the corner"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hirokimoto/monitor"
repository = "https://github.com/hirokimoto/monitor"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "shellapi", "libloaderapi", "basetsd"] }

[dependencies]
winit = { version = "0.25", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[lib]
name = "monitor"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
all-features = true

[workspace]
members = [
    "examples/winit",
    "examples/winapi",
    "examples/crossbeam",
]

[features]
default = []