[package]
name = "monitor"
version = "0.1.0"
authors = ["Hiroki Moto <hiroki.moto.pro@gmail.com>"]
edition = "2018"
description = "Tray Icon, that thing in the corner"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hirokimoto/monitor"
repository = "https://github.com/hirokimoto/monitor"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "shellapi", "libloaderapi", "basetsd"] }

[dependencies]
winit = { version = "0.25", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
serde = {version = "1.0", features = ["derive"], optional=true}
lazy_static = "1.4"
anyhow = "1.0"
display-info = "0.4"
image = "0.24"
percent-encoding = "2.3"
aes = { version = "0.8.2", optional = true }
byteorder = "1.4.3"
bzip2 = { version = "0.4.3", optional = true }
constant_time_eq = { version = "0.1.5", optional = true }
crc32fast = "1.3.2"
flate2 = { version = "1.0.23", default-features = false, optional = true }
hmac = { version = "0.12.1", optional = true, features = ["reset"] }
pbkdf2 = {version = "0.11.0", optional = true }
sha1 = {version = "0.10.1", optional = true }
time = { version = "0.3.7", optional = true, default-features = false, features = ["std"] }
zstd = { version = "0.11.2", optional = true }
chrono = "0.4"
parking_lot = "0.12"
linkify = "0.10.0"

[lib]
name = "monitor"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
all-features = true

[workspace]
members = [
    "examples/winit",
    "examples/winapi",
    "examples/crossbeam",
]

[features]
serialize = ["serde"]
unstable_grab = ["evdev-rs", "epoll", "inotify"]
aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
deflate = ["flate2/rust_backend"]
deflate-miniz = ["flate2/default"]
deflate-zlib = ["flate2/zlib"]
unreserved = []
default = ["aes-crypto", "bzip2", "deflate", "time", "zstd"]

[target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
crossbeam-utils = "0.8.8"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.22"
core-graphics = "0.22"
core-foundation = {version = "0.7"}
core-foundation-sys = {version = "0.7"}

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
x11 = {version = "2.18", features = ["xlib", "xrecord", "xinput"]}
evdev-rs = {version = "0.4.0", optional=true}
epoll = {version = "4.1.0", optional=true}
inotify = {version = "0.8.2", default-features=false, optional=true}
dbus = { version = "0.9", features = ["vendored"] }
libwayshot = "0.2"
xcb = "1.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "processthreadsapi"] }
fxhash = "0.2"
widestring = "1.0"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }

[dev-dependencies]
serde_json = "1.0"
serial_test = "0.4"
tokio = {version = "1.5", features=["sync", "macros", "rt-multi-thread"]}
bencher = "0.1.5"
getrandom = "0.2.5"
walkdir = "2.3.2"
time = { version = "0.3.7", features = ["formatting", "macros"] }

[[example]]
name = "serialize"
path = "track/serialize.rs"
required-features = ["serialize"]

[[example]]
name = "grab"
path = "track/grab.rs"
required-features = ["unstable_grab"]

[[example]]
name = "tokio_channel"
path = "track/tokio_channel.rs"
required-features = ["unstable_grab"]

[[test]]
name = "grab"
path = "tests/grab.rs"
required-features = ["unstable_grab"]

[[bench]]
name = "read_entry"
harness = false

[[bench]]
name = "read_metadata"
harness = false